--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div id="filterDiv"></div>
 
     <!-- JavaScript Import -->
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
