--- a/index.html
+++ b/index.html
@@ -144,9 +144,68 @@
             </div>
         </form>
     </div>
-
-
-    <div id="filterDiv"></div>
+    <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M0 2.889A2.889 2.889 0 0 1 2.889 0H13.11A2.889 2.889 0 0 1 16 2.889V13.11A2.888 2.888 0 0 1 13.111 16H2.89A2.889 2.889 0 0 1 0 13.111V2.89Zm1.333 5.555v4.667c0 .859.697 1.556 1.556 1.556h6.889V8.444H1.333Zm8.445-1.333V1.333h-6.89A1.556 1.556 0 0 0 1.334 2.89V7.11h8.445Zm4.889-1.333H11.11v4.444h3.556V5.778Zm0 5.778H11.11v3.11h2a1.556 1.556 0 0 0 1.556-1.555v-1.555Zm0-7.112V2.89a1.555 1.555 0 0 0-1.556-1.556h-2v3.111h3.556Z" fill="#828FA3"/></svg>
+    <svg width="12" height="12" xmlns="http://www.w3.org/2000/svg"><path fill="#FFF" d="M7.368 12V7.344H12V4.632H7.368V0H4.656v4.632H0v2.712h4.656V12z"/></svg>
+    <svg width="19" height="19" xmlns="http://www.w3.org/2000/svg">
+        <text x="2" y="15" font-size="14" fill="#828FA3">✨</text>
+      </svg>
+      <?xml version="1.0" encoding="UTF-8" standalone="no" ?>
+<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="478" height="81" viewBox="0 0 478 81" xml:space="preserve">
+<desc>Created with Fabric.js 5.2.4</desc>
+<defs>
+</defs>
+<g transform="matrix(0 0 0 0 0 0)" id="3528eec2-dfd0-4c04-a6e8-66a43c0561b1">
+</g>
+<g transform="matrix(1 0 0 1 239 40.5)" id="95afc617-cc57-4d07-bb17-78f7285e8bde">
+<rect style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(255,255,255); fill-rule: nonzero; opacity: 1; visibility: hidden;" vector-effect="non-scaling-stroke"  x="-239" y="-40.5" rx="0" ry="0" width="478" height="81" />
+</g>
+<g transform="matrix(0.09 0 0 0.09 0 40.5)" style = "" id="b86d6ad2-4d31-4d60-a2b7-633de9bb16e6">
+    <text xml:space="preserve" font-family="Raleway" font-size="650" font-style="normal" font-weight="900" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(255,255,255); fill-rule: nonzero; opacity: 1; white-space: pre;" ><tspan x="0" y="80" >✨</tspan></text>
+</g>
+</svg>
+<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
+<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="478" height="81" viewBox="0 0 478 81" xml:space="preserve">
+<desc>Created with Fabric.js 5.2.4</desc>
+<defs>
+</defs>
+<g transform="matrix(0 0 0 0 0 0)" id="3528eec2-dfd0-4c04-a6e8-66a43c0561b1">
+</g>
+<g transform="matrix(1 0 0 1 239 40.5)" id="95afc617-cc57-4d07-bb17-78f7285e8bde">
+<rect style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(255,255,255); fill-rule: nonzero; opacity: 1; visibility: hidden;" vector-effect="non-scaling-stroke"  x="-239" y="-40.5" rx="0" ry="0" width="478" height="81" />
+</g>
+<g transform="matrix(0.09 0 0 0.09 0 40.5)" style="" id="b86d6ad2-4d31-4d60-a2b7-633de9bb16e6">
+    <text xml:space="preserve" font-family="Raleway" font-size="650" font-style="normal" font-weight="900" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(0,0,0); fill-rule: nonzero; opacity: 1; white-space: pre;" ><tspan x="0" y="80" >AGILE BOARD✨</tspan></text>
+</g>
+</svg>
+<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
+<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="478" height="81" viewBox="0 0 478 81" xml:space="preserve">
+<desc>Created with Fabric.js 5.2.4</desc>
+<defs>
+</defs>
+<g transform="matrix(0 0 0 0 0 0)" id="3528eec2-dfd0-4c04-a6e8-66a43c0561b1">
+</g>
+<g transform="matrix(1 0 0 1 239 40.5)" id="95afc617-cc57-4d07-bb17-78f7285e8bde">
+<rect style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(255,255,255); fill-rule: nonzero; opacity: 1; visibility: hidden;" vector-effect="non-scaling-stroke"  x="-239" y="-40.5" rx="0" ry="0" width="478" height="81" />
+</g>
+<g transform="matrix(0.09 0 0 0.09 0 40.5)" style="" id="b86d6ad2-4d31-4d60-a2b7-633de9bb16e6">
+    <text xml:space="preserve" font-family="Raleway" font-size="650" font-style="normal" font-weight="900" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-dashoffset: 0; stroke-linejoin: miter; stroke-miterlimit: 4; fill: rgb(255,255,255); fill-rule: nonzero; opacity: 1; white-space: pre;" ><tspan x="0" y="80" >AGILE BOARD✨</tspan></text>
+</g>
+</svg>
+<svg width="5" height="20" xmlns="http://www.w3.org/2000/svg"><g fill="#828FA3" fill-rule="evenodd"><circle cx="2.308" cy="2.308" r="2.308"/><circle cx="2.308" cy="10" r="2.308"/><circle cx="2.308" cy="17.692" r="2.308"/></g></svg>
+<svg width="19" height="19" xmlns="http://www.w3.org/2000/svg">
+    <text x="2" y="15" font-size="14" fill="#828FA3">👀</text>
+  </svg>
+  <svg width="19" height="19" xmlns="http://www.w3.org/2000/svg">
+    <text x="2" y="15" font-size="14" fill="#828FA3">➕</text>
+  </svg>
+  <svg width="19" height="19" xmlns="http://www.w3.org/2000/svg">
+    <text x="2" y="15" font-size="14" fill="#828FA3">🌞</text>
+  </svg>
+  
+<div id="filterDiv"></div>
 
     <!-- JavaScript Import -->
     
