--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="toggle-div">
                 <img src="./assets/icon-dark-theme.svg" id="icon-dark" alt="icon-dark-theme">
                 <input type="checkbox" id="switch" />
-                <label for="switch" id="label-checkbox-theme"></label>
+                <label for="switch" id="label-checkbox-theme">Toggle Theme</label>
                 <img src="./assets/icon-light-theme.svg" id="icon-light" alt="icon-light-theme">
             </div>
             <div class="hide-side-bar-div">
