--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
     </nav>
-    <button id="show-side-bar-btn">
+    <button id="show-side-bar-btn" aria-label="Show Sidebar">
         <img src="./assets/icon-show-sidebar.svg" alt="icon-show-sidebar">
     </button>
 
@@ -48,7 +48,7 @@
             <div class="header-name-div">
                 <img src="./assets/logo-mobile.svg" alt="logo-mobile" class="logo-mobile">
                 <h2 class="header-board-name" id="header-board-name"></h2>
-                <button class="dropdownBtn" id="dropdownBtn">
+                <button class="dropdownBtn" id="dropdownBtn" aria-label="Open Dropdown Menu">
                     <img src="./assets/icon-chevron-down.svg" alt="icon-chevron-down" class="icon-chevron-down" id="dropDownIcon">
                 </button>
             </div>
