--- a/index.html
+++ b/index.html
@@ -95,29 +95,29 @@
     </div>
 
     <!-- New Task Modal: Form for adding a new task. -->
-    <form class="modal-window" id="new-task-modal-window">
-        <h4 class="modal-title">Add New Task</h4>
-        <div class="input-div">
-            <label class="label-modal-window" id="modal-title-input" for="title-input">Title</label>
-            <input type="text" class="modal-input" id="title-input" placeholder="e.g. Take a little break">
-        </div>
-        <div class="input-div">
-            <label class="label-modal-window" id="modal-desc-input" for="desc-input">Description</label>
-            <textarea name="description" id="desc-input" placeholder="e.g. Pet your dog, have a cup of coffee, dance to your favourite song and come back to conquer this challenge. 💪🏾"></textarea>
-        </div>
-        <div class="input-div">
-            <label class="label-modal-window" id="modal-select-status" for="select-status">Status</label>
-            <select name="status" id="select-status">
-                <option value="todo">todo</option>
-                <option value="doing">doing</option>
-                <option value="done">done</option>
-            </select>
-        </div>
-        <div class="button-group">
-            <button type="submit" class="submit-btn" id="create-task-btn">Create Task</button>
-            <button type="button" class="submit-btn" id="cancel-add-task-btn">Cancel</button>
-        </div>
-    </form>
+<form class="modal-window" id="new-task-modal-window">
+    <h4 class="modal-title">Add New Task</h4>
+    <div class="input-div">
+        <label class="label-modal-window" id="modal-title-input" for="title-input">Title</label>
+        <input type="text" class="modal-input" id="title-input" name="title" placeholder="e.g. Take a little break">
+    </div>
+    <div class="input-div">
+        <label class="label-modal-window" id="modal-desc-input" for="desc-input">Description</label>
+        <textarea name="description" id="desc-input" placeholder="e.g. Pet your dog, have a cup of coffee, dance to your favourite song and come back to conquer this challenge. 💪🏾"></textarea>
+    </div>
+    <div class="input-div">
+        <label class="label-modal-window" id="modal-select-status" for="select-status">Status</label>
+        <select name="status" id="select-status">
+            <option value="todo">todo</option>
+            <option value="doing">doing</option>
+            <option value="done">done</option>
+        </select>
+    </div>
+    <div class="button-group">
+        <button type="submit" class="submit-btn" id="create-task-btn">Create Task</button>
+        <button type="button" class="submit-btn" id="cancel-add-task-btn">Cancel</button>
+    </div>
+</form>
 
     <!-- Edit Task Modal: Form for editing an existing task's details. -->
     <div class="edit-task-modal-window">
