--- a/index.html
+++ b/index.html
@@ -10,122 +10,120 @@
         @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
     </style>
     <link rel="stylesheet" href="./index.css">
-    <script src="js/index.js"></script>
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.svg">
     <title>Agile Board Task Management</title>
 </head>
 
 <body>
     <!-- Navigation Sidebar: Contains the logo, navigation links for boards, and theme toggle. -->
-<nav class="side-bar" id="side-bar-div">
-    <div id="side-logo-div">
-        <img id="logo" src="./assets/logo-dark.svg" alt="logo-dark">
-    </div>
+    <nav class="side-bar" id="side-bar-div">
+        <div id="side-logo-div">
+            <img id="logo" src="./assets/logo-dark.svg" alt="logo-dark">
+        </div>
 
-    <div class="boards-nav-links-div" id="boards-nav-links-div">
-        <h4 id="headline-sidepanel">ALL BOARDS</h4>
-    </div>
-    <div class="side-bar-bottom">
-        <div class="toggle-div">
-            <img src="./assets/icon-dark-theme.svg" id="icon-dark" alt="icon-dark-theme">
-            <input type="checkbox" id="switch" aria-label="Toggle between dark and light theme" />
-            <label for="switch" id="label-checkbox-theme">Toggle Theme</label>
-            <img src="./assets/icon-light-theme.svg" id="icon-light" alt="icon-light-theme">
+        <div class="boards-nav-links-div" id="boards-nav-links-div">
+            <h4 id="headline-sidepanel">ALL BOARDS</h4>
         </div>
-        <div class="hide-side-bar-div">
-            <img src="./assets/icon-hide-sidebar.svg" alt="icon-hide-sidebar">
-            <button id="hide-side-bar-btn">Hide Sidebar</button>
+        <div class="side-bar-bottom">
+            <div class="toggle-div">
+                <img src="./assets/icon-dark-theme.svg" id="icon-dark" alt="icon-dark-theme">
+                <input type="checkbox" id="switch" />
+                <label for="switch" id="label-checkbox-theme"></label>
+                <img src="./assets/icon-light-theme.svg" id="icon-light" alt="icon-light-theme">
+            </div>
+            <div class="hide-side-bar-div">
+                <img src="./assets/icon-hide-sidebar.svg" alt="icon-hide-sidebar">
+                <button id="hide-side-bar-btn">Hide Sidebar</button>
+            </div>
         </div>
-    </div>
-</nav>
-<button id="show-side-bar-btn" aria-label="Show Sidebar">
-    <img src="./assets/icon-show-sidebar.svg" alt="icon-show-sidebar">
-</button>
+    </nav>
+    <button id="show-side-bar-btn">
+        <img src="./assets/icon-show-sidebar.svg" alt="icon-show-sidebar">
+    </button>
 
     <!-- Main Layout: Header with board title, add task button, and main content area for task columns. -->
-<div id="layout">
-    <header id="header" class="sticky-header">
-        <div class="header-name-div">
-            <img src="./assets/logo-mobile.svg" alt="logo-mobile" class="logo-mobile">
-            <h2 class="header-board-name" id="header-board-name"></h2>
-            <button class="dropdownBtn" id="dropdownBtn" aria-label="Open Dropdown Menu">
-                <img src="./assets/icon-chevron-down.svg" alt="icon-chevron-down" class="icon-chevron-down" id="dropDownIcon">
+    <div id="layout">
+        <header id="header" class="sticky-header">
+            <div class="header-name-div">
+                <img src="./assets/logo-mobile.svg" alt="logo-mobile" class="logo-mobile">
+                <h2 class="header-board-name" id="header-board-name"></h2>
+                <button class="dropdownBtn" id="dropdownBtn">
+                    <img src="./assets/icon-chevron-down.svg" alt="icon-chevron-down" class="icon-chevron-down" id="dropDownIcon">
+                </button>
+            </div>
+            <button id="add-new-task-btn" class="primary-btn">+ Add New Task</button>
+            <button class="edit-btn" id="edit-board-btn">
+                <p id="three-dots-icon">&#8942;</p>
             </button>
-        </div>
-        <button id="add-new-task-btn" class="primary-btn">+ Add New Task</button>
-        <button class="edit-btn" id="edit-board-btn">
-            <p id="three-dots-icon">&#8942;</p>
-        </button>
-        <div id="editBoardDiv" class="editBtnsDiv">
-            <button class="editBtns" id="deleteBoardBtn">Delete Board</button>
-        </div>
-    </header>
-</div>
+            <div id="editBoardDiv" class="editBtnsDiv">
+                <button class="editBtns" id="deleteBoardBtn">Delete Board</button>
+            </div>
+        </header>
 
         <div class="container">
             <main class="card-column-main">
                 <!-- Task Columns: Display tasks grouped by status (TODO, DOING, DONE). -->
                 <div class="column-div" data-status="todo">
-                    <div class="column-head-div">
-                        <span class="dot todo-dot"></span>
-                        <h4 class="toDoText columnHeader">TODO</h4>
+                    <div id="todo-head-div" class="column-head-div">
+                        <span class="dot" id="todo-dot"></span>
+                        <h4 id="toDoText" class="columnHeader">TODO</h4>
                     </div>
                     <!-- Tasks container for TODO -->
                     <div class="tasks-container"></div>
                 </div>
                 <!-- DOING Column -->
                 <div class="column-div" data-status="doing">
-                    <div class="column-head-div">
-                        <span class="dot doing-dot"></span>
-                        <h4 class="doingText columnHeader">DOING</h4>
+                    <div id="doing-head-div" class="column-head-div">
+                        <span class="dot" id="doing-dot"></span>
+                        <h4 id="doingText" class="columnHeader">DOING</h4>
                     </div>
                     <!-- Tasks container for DOING -->
                     <div class="tasks-container"></div>
                 </div>
                 <!-- DONE Column -->
                 <div class="column-div" data-status="done">
-                    <div class="column-head-div">
-                        <span class="dot done-dot"></span>
-                        <h4 class="doneText columnHeader">DONE</h4>
+                    <div id="done-head-div" class="column-head-div">
+                        <span class="dot" id="done-dot"></span>
+                        <h4 id="doneText" class="columnHeader">DONE</h4>
                     </div>
                     <!-- Tasks container for DONE -->
                     <div class="tasks-container"></div>
                 </div>
             </main>
         </div>
-   
+    </div>
 
     <!-- New Task Modal: Form for adding a new task. -->
-<form class="modal-window" id="new-task-modal-window">
-    <h4 class="modal-title">Add New Task</h4>
-    <div class="input-div">
-        <label class="label-modal-window" id="modal-title-input" for="title-input">Title</label>
-        <input type="text" class="modal-input" id="title-input" name="title" placeholder="e.g. Take a little break">
-    </div>
-    <div class="input-div">
-        <label class="label-modal-window" id="modal-desc-input" for="desc-input">Description</label>
-        <textarea name="description" id="desc-input" placeholder="e.g. Pet your dog, have a cup of coffee, dance to your favourite song and come back to conquer this challenge. 💪🏾"></textarea>
-    </div>
-    <div class="input-div">
-        <label class="label-modal-window" id="modal-select-status" for="select-status">Status</label>
-        <select name="status" id="select-status">
-            <option value="todo">todo</option>
-            <option value="doing">doing</option>
-            <option value="done">done</option>
-        </select>
-    </div>
-    <div class="button-group">
-        <button type="submit" class="submit-btn" id="create-task-btn">Create Task</button>
-        <button type="button" class="submit-btn" id="cancel-add-task-btn">Cancel</button>
-    </div>
-</form>
+    <form class="modal-window" id="new-task-modal-window">
+        <h4 class="modal-title">Add New Task</h4>
+        <div class="input-div">
+            <label class="label-modal-window" id="modal-title-input" for="title-input">Title</label>
+            <input type="text" class="modal-input" id="title-input" placeholder="e.g. Take a little break">
+        </div>
+        <div class="input-div">
+            <label class="label-modal-window" id="modal-desc-input" for="desc-input">Description</label>
+            <textarea name="description" id="desc-input" placeholder="e.g. Pet your dog, have a cup of coffee, dance to your favourite song and come back to conquer this challenge. 💪🏾"></textarea>
+        </div>
+        <div class="input-div">
+            <label class="label-modal-window" id="modal-select-status" for="select-status">Status</label>
+            <select name="status" id="select-status">
+                <option value="todo">todo</option>
+                <option value="doing">doing</option>
+                <option value="done">done</option>
+            </select>
+        </div>
+        <div class="button-group">
+            <button type="submit" class="submit-btn" id="create-task-btn">Create Task</button>
+            <button type="button" class="submit-btn" id="cancel-add-task-btn">Cancel</button>
+        </div>
+    </form>
 
     <!-- Edit Task Modal: Form for editing an existing task's details. -->
     <div class="edit-task-modal-window">
         <form id="edit-task-form">
             <div class="edit-task-div" id="edit-task-header">
                 <input type="text" id="edit-task-title-input" class="task-title-input" placeholder="Task Title">
-                <button id="edit-btn" class="edit-btn">Edit</button>
+                <button id="edit-btn" class="edit-btn"></button>
             </div>
             <div class="edit-task-div">
                 <textarea id="edit-task-desc-input" class="edit-task-description-input" placeholder="Task Description"></textarea>
@@ -145,11 +143,12 @@
             </div>
         </form>
     </div>
-    
-  
-<div id="filterDiv"></div>
+
+
+    <div id="filterDiv"></div>
 
     <!-- JavaScript Import -->
-    
+    <script type="module" src="./index.js"></script>
 </body>
+
 </html>
