--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <form id="edit-task-form">
             <div class="edit-task-div" id="edit-task-header">
                 <input type="text" id="edit-task-title-input" class="task-title-input" placeholder="Task Title">
-                <button id="edit-btn" class="edit-btn"></button>
+                <button id="edit-btn" class="edit-btn">Edit</button>
             </div>
             <div class="edit-task-div">
                 <textarea id="edit-task-desc-input" class="edit-task-description-input" placeholder="Task Description"></textarea>
